syntax = "proto2";

message PeerId {
    required string value = 1;
}
